2005-02-07  David Gilbert <david.gilbert@object-refinery.com>
	* gnu/testlet/java/text/DecimalFormat/equals.java: New tests.
	
2005-02-07  Thomas Zander <zander@kde.org>
	* gnu/testlet/java/io/FileDescriptor/jdk11.java,
	gnu/testlet/java/io/FileReader/jdk11.java, gnu/testlet/java/io/FileWriter/jdk11.java,
	gnu/testlet/java/io/RandomAccessFile/jdk11.java:
	Remove useless upcast to SimpleTestHarness

2005-02-07  Robert Schuster <thebohemian@gmx.net>

	* gnu/testlet/java/nio/charset/Charset/forName2.java:
	New test.

2005-02-06  Mark Wielaard  <mark@klomp.org>

	Based on a suggestion from Timo Lindfors <timo.lindfors@iki.fi>
	* gnu/testlet/java/util/regex/Pattern/matches.java: New test.

2005-02-06  Mark Wielaard  <mark@klomp.org>

	Based on a suggestion from Amit Jain (amitrjain@hotmail.com)
	* gnu/testlet/java/lang/String/split.java: New test.

2005-02-06 Audrius Meskauskas <audriusa@bluewin.ch>

	* gnu/testlet/javax/swing/text/html/HTML/HTML_Test.java,
	gnu/testlet/javax/swing/text/html/parser/AttributeList/AttributeList_test.java 
	gnu/testlet/javax/swing/text/html/parser/DTD/DTD_test.java,
	gnu/testlet/javax/swing/text/html/parser/Element/Element_Test.java,
	gnu/testlet/javax/swing/text/html/parser/Entity/Entity_Test.java,
	gnu/testlet/javax/swing/text/html/parser/TagElement/TagElement_Test.java:
	Changed JDK tag to 1.2.

2005-02-06 Audrius Meskauskas <audriusa@bluewin.ch>

	* gnu/testlet/javax/swing/text/html/parser/AttributeList/AttributeList_test.java ,
	gnu/testlet/javax/swing/text/html/parser/DTD/DTD_test.java,
	gnu/testlet/javax/swing/text/html/parser/Element/Element_Test.java,
	gnu/testlet/javax/swing/text/html/parser/Entity/Entity_Test.java,
	gnu/testlet/javax/swing/text/html/parser/TagElement/TagElement_Test.java:
	New tests.
	
2005-02-02  David Daney <ddaney@avtrex.com>

	* gnu/testlet/java/net/InetAddress/getByAddress.java:
	New testcase.

2005-02-02  David Daney <ddaney@avtrex.com>

	* gnu/testlet/java/util/GregorianCalendar/getMinimum.java: